<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Admin">

    <Button
        android:id="@+id/btnSchedDriver"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/schedule_driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSchedCurator"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/schedule_curator"
        app:layout_constraintEnd_toEndOf="@+id/btnSchedDriver"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/btnSchedDriver"
        app:layout_constraintTop_toBottomOf="@+id/btnSchedDriver" />

    <Button
        android:id="@+id/btnSchedJuniorAdmin"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_junior_admin"
        app:layout_constraintEnd_toEndOf="@+id/btnSchedCurator"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSchedCurator"
        app:layout_constraintTop_toBottomOf="@+id/btnSchedCurator" />
</androidx.constraintlayout.widget.ConstraintLayout>