<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Admin">

    <Button
        android:id="@+id/btnNameOfDriver"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/name_of_driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNumberOfCar"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/number_of_car"
        app:layout_constraintEnd_toEndOf="@+id/btnNameOfDriver"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/btnNameOfDriver"
        app:layout_constraintTop_toBottomOf="@+id/btnNameOfDriver" />

    <Button
        android:id="@+id/btnNumberOfRun"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/number_of_run"
        app:layout_constraintEnd_toEndOf="@+id/btnNumberOfCar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNumberOfCar"
        app:layout_constraintTop_toBottomOf="@+id/btnNumberOfCar" />
</androidx.constraintlayout.widget.ConstraintLayout>